[package]
name = "wifi_multi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = { version="0.45", features = ["std", "experimental"] }
esp-idf-hal = "0.40"
embedded-svc = "0.24"
thiserror = "1.0"
